<resources>
    <string name="app_name">Your Drinkgame</string>

    <string name="back">zurück</string>
    <string name="feedback">Feedback</string>
    <string name="options">optionen</string>
    <string name="cardSets">Kartensets</string>

    <string name="start_button">Start</string>

    <string name="name_input">Name</string>
    <string name="add_player">+</string>
    <string name="enter_name">Geb einen Namen ein!</string>
    <string name="start_game">Spiel starten</string>

    <string name="private_card_sets">Privat</string>
    <string name="workshop_card_sets">Workshop</string>


    <string name="create_card_set_name">Kartenset Name</string>
    <string name="create_card_set_Description">Beschreibung</string>
    <string name="create_card_set_abort">Abbrechen</string>
    <string name="create_card_set_confirm">Erstellen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
