<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".Menu">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:contentDescription="mipmap-hdpi/SaufenIstGesund_schwarz_Button.png"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/test_logo"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35"
        android:id="@+id/start_button"
        android:text="@string/start_button" />

    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/card_sets_button"
        android:text="@string/cardSets" />


    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65"
        android:id="@+id/feedback"
        android:text="@string/feedback" />

    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        android:id="@+id/options"
        android:text="@string/options" />




</androidx.constraintlayout.widget.ConstraintLayout>